test/equality/negative/comp_too_few_args.mli
val f : int -> int
(*@ comparison *)
